db.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod4
  namespace: preprod
  labels:
   app: db
spec:
  containers:
    - name: cont1
      image: mariadb:10.6
