deploy-pvc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "deploying beauty v2"
  name: deploy1
spec:
  replicas: 2
  selector:
     matchLabels:
       client: ecom
  template:
    metadata:
      labels:
        client: ecom
    spec:
      containers:
        - name: cont1
          image: shaikmustafa/cycle
          volumeMounts:
            - name: vol
              mountPath: /tmp/data
          ports:
            - containerPort: 80
        - name: cont2
          image: ubuntu
          command: ["/bin/bash", "-c", "while true;do echo System time $(date +%H:%M:%S);sleep 30; done"]
          volumeMounts:
            - name: vol
              mountPath: /tmp/test

      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: pvc1
