po.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: zomato
    env: preprod
    client: ecom
spec:
  nodeSelector:
    inst: worker1
  containers:
  - name: cont1
    image: sriramk16/beauty
    ports:
      - containerPort: 80
