statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubernetes.io/change-cause: "deploying Stateful"
  name: ss1
spec:
  replicas: 2
  selector:
     matchLabels:
       app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: cont1
          image: mysql:8.0
          ports:
            - containerPort: 3306
