allow-db-ingress-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-ingress-egress
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: default
          podSelector:
            matchLabels:
              app: swiggy
      ports:
        - protocol: TCP
          port: 3306        
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              ns: default
          podSelector:
            matchLabels:
              app: swiggy
